--- a/views/main.ejs
+++ b/views/main.ejs
@@ -473,14 +473,12 @@
     }
 
     function checkLoginAndStartGame(gameCode) {
-      <!--        <% if (typeof user !== 'undefined' && user.id) { %>-->
+        <% if (typeof user !== 'undefined' && user.id) { %>
       // User is logged in, start the game
-      // gameStart(gameCode);
-        <% } else { %>
       gameStart(gameCode);
-
+        <% } else { %>
       // User is not logged in, show alert
-      // alert('Please log in to play this game.');
+      alert('Please log in to play this game.');
       // Optionally, redirect to login page
       // window.location.href = '/login';
         <% } %>
