--- a/views/login-form.ejs
+++ b/views/login-form.ejs
@@ -16,11 +16,13 @@
         <button type="submit" class="btn btn-primary">
             로그인
         </button>
-        <a href="/signup" class="btn btn-secondary" style="display: flex; align-items: center; justify-content: center; text-decoration: none;">
+        <a href="javascript:void(0);" class="btn btn-secondary" style="display: flex; align-items: center; justify-content: center; text-decoration: none;" onclick="alert('Coming soon!');">
             회원가입
         </a>
     </form>
     <div class="form-footer">
-        <a href="/forgot-password">비밀번호를 잊으셨나요?</a>
+        <a href="javascript:void(0);" onclick="alert('Coming soon!');">
+            비밀번호를 잊으셨나요?
+        </a>
     </div>
 </div>
