--- a/views/main.ejs
+++ b/views/main.ejs
@@ -398,7 +398,8 @@
                 <h2 class="category-header">Slot</h2>
                 <div class="game-grid">
                     <% const slotGames = [
-                        {code: 'TA001', name: 'Game #1', description: 'Game #1', image: '/images/TA001.png'},
+                        {code: 'TA001', name: 'Ancksunamun', description: 'Game #1', image: '/images/TA001.png'},
+                        {code: 'TA002', name: 'King Arthur', description: 'Game #1', image: 'https://plus.unsplash.com/premium_photo-1670446441809-cf6588891e8d?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'},
                     ]; %>
                     <% slotGames.forEach(game => { %>
                         <div class="game-card" onclick="checkLoginAndStartGame('<%= game.code %>')">
