--- a/views/user-profile.ejs
+++ b/views/user-profile.ejs
@@ -4,7 +4,7 @@
         <img src="<%= avatar_url %>" alt="User Avatar" class="w-12 h-12 rounded-full mr-3 border-2 border-primary">
         <div>
             <h2 class="text-lg font-bold" style="color: var(--primary-color);"><%= username %></h2>
-            <p class="text-xs" style="color: var(--placeholder-color);">Welcome back!</p>
+<!--            <p class="text-xs" style="color: var(&#45;&#45;placeholder-color);">Welcome back!</p>-->
         </div>
     </div>
 
