--- a/views/holdem.ejs
+++ b/views/holdem.ejs
@@ -23,7 +23,7 @@
   <script src="https://unpkg.com/colyseus.js@^0.15.0/dist/colyseus.js"></script>
   <script>
     // Set your monitor URL globally
-    window.monitorUrl = 'ws://127.0.0.1:4000'; // Replace with your actual URL
+    window.monitorUrl = 'wss://dev-holdem.emp555.com'; // Replace with your actual URL
   </script>
   <script src="/js/components/holdem-room-modal.js"></script>
   <script src="/js/holdem.js"></script>
