--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -11,7 +11,7 @@
   <%- include('partials/navbar') %>
 
   <div class="content">
-    <%- include('partials/mypage/profile-section') %>
+<!--    <%- include('partials/mypage/profile-section') %>-->
     <%- include('partials/mypage/stats-section') %>
     <%- include('partials/mypage/cash-history') %>
     <%- include('partials/mypage/avatar-history') %>
