--- a/views/partials/holdem/channel-list.ejs
+++ b/views/partials/holdem/channel-list.ejs
@@ -3,16 +3,15 @@
   <button class="carousel-button next" aria-label="Next channels">❯</button>
 
   <div class="channel-list">
-    <% channels.forEach(channel => { %>
-      <a href="#" class="channel-card" data-channel-id="<%= channel.channelId %>">
-        <div class="channel-header">
-          <h3><%= channel.name %></h3>
-          <span class="player-count"><%= channel.requirement %></span>
-        </div>
-        <div class="channel-buttons">
-          <button class="web-button"><%= '실행' %></button>
-        </div>
-      </a>
-    <% }); %>
+    <a href="#" class="channel-card" data-channel-id="holdem-01">
+      <div class="channel-header">
+        <h3>홀덤</h3>
+<!--        <span class="player-count">2-9명</span>-->
+      </div>
+      <div class="channel-buttons">
+        <button class="web-button">실행</button>
+      </div>
+    </a>
+  </div>
   </div>
 </div>
