--- a/views/partials/mypage/profile-section.ejs
+++ b/views/partials/mypage/profile-section.ejs
@@ -5,12 +5,12 @@
       내 정보 수정
     </button>
   </div>
-  
+
   <div class="profile-content">
     <div class="profile-main">
       <img id="userAvatar" class="profile-avatar" alt="User avatar">
       <div class="profile-info">
-        <h3 id="username">qudtls18</h3>
+        <h3 id="username"><%= user.username %></h3>
         <span class="membership-badge">일반</span>
       </div>
     </div>
